FullRef/Grammar/FullRefParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 4.13.1
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// Generated from /tmp/FullRef.g4 by ANTLR 4.13.1

// Unreachable code detected
#pragma warning disable 0162
// The variable '...' is assigned but its value is never used
#pragma warning disable 0219
// Missing XML comment for publicly visible type or member '...'
#pragma warning disable 1591
// Ambiguous reference in cref attribute
#pragma warning disable 419

using System;
using System.IO;
using System.Text;
using System.Diagnostics;
using System.Collections.Generic;
using Antlr4.Runtime;
using Antlr4.Runtime.Atn;
using Antlr4.Runtime.Misc;
using Antlr4.Runtime.Tree;
using DFA = Antlr4.Runtime.Dfa.DFA;

[System.CodeDom.Compiler.GeneratedCode("ANTLR", "4.13.1")]
[System.CLSCompliant(false)]
public partial class FullRefParser : Parser {
	protected static DFA[] decisionToDFA;
	protected static PredictionContextCache sharedContextCache = new PredictionContextCache();
	public const int
		TYPE=1, INERT=2, IF=3, THEN=4, ELSE=5, TRUE=6, FALSE=7, BOOL=8, CASE=9, 
		OF=10, AS=11, LAMBDA=12, LET=13, IN=14, FIX=15, LETREC=16, TBOT=17, TTOP=18, 
		USTRING=19, REF=20, RREF=21, SSOURCE=22, SSINK=23, UNIT=24, UUNIT=25, 
		TIMESFLOAT=26, UFLOAT=27, SUCC=28, PRED=29, ISZERO=30, NAT=31, STRINGV=32, 
		USCORE=33, APOSTROPHE=34, DQUOTE=35, BANG=36, HASH=37, TRIANGLE=38, STAR=39, 
		VBAR=40, DOT=41, SEMI=42, COMMA=43, SLASH=44, COLON=45, COLONCOLON=46, 
		EQ=47, EQEQ=48, LSQUARE=49, LT=50, LCURLY=51, LPAREN=52, LEFTARROW=53, 
		LCURLYBAR=54, LSQUAREBAR=55, RCURLY=56, RPAREN=57, RSQUARE=58, GT=59, 
		BARRCURLY=60, BARGT=61, BARRSQUARE=62, COLONEQ=63, ARROW=64, DARROW=65, 
		DDARROW=66, FLOATV=67, INTV=68, UCID=69, LCID=70, WS=71, TAB=72, NL=73, 
		NL1=74;
	public const int
		RULE_toplevel = 0, RULE_command = 1, RULE_binder = 2, RULE_type = 3, RULE_atype = 4, 
		RULE_tybinder = 5, RULE_fieldtypes = 6, RULE_nefieldtypes = 7, RULE_fieldtype = 8, 
		RULE_arrowtype = 9, RULE_term = 10, RULE_appterm = 11, RULE_ascribeterm = 12, 
		RULE_pathterm = 13, RULE_termseq = 14, RULE_aterm = 15, RULE_cases = 16, 
		RULE_case = 17, RULE_fields = 18, RULE_nefields = 19, RULE_field = 20;
	public static readonly string[] ruleNames = {
		"toplevel", "command", "binder", "type", "atype", "tybinder", "fieldtypes", 
		"nefieldtypes", "fieldtype", "arrowtype", "term", "appterm", "ascribeterm", 
		"pathterm", "termseq", "aterm", "cases", "case", "fields", "nefields", 
		"field"
	};

	private static readonly string[] _LiteralNames = {
		null, "'type'", "'inert'", "'if'", "'then'", "'else'", "'true'", "'false'", 
		"'Bool'", "'case'", "'of'", "'as'", "'lambda'", "'let'", "'in'", "'fix'", 
		"'letrec'", "'Bot'", "'Top'", "'String'", "'ref'", "'Ref'", "'Source'", 
		"'Sink'", "'unit'", "'Unit'", "'timesfloat'", "'Float'", "'succ'", "'pred'", 
		"'iszero'", "'Nat'", null, "'_'", "'''", "'\"'", "'!'", "'#'", "'$'", 
		"'*'", "'|'", "'.'", "';'", "','", "'/'", "':'", "'::'", "'='", "'=='", 
		"'['", "'<'", "'{'", "'('", "'<-'", "'{|'", "'[|'", "'}'", "')'", "']'", 
		"'>'", "'|}'", "'|>'", "'|]'", "':='", "'->'", "'=>'", "'==>'", null, 
		null, null, null, "' '", "'\\t'", "'\\r'", "'\\n'"
	};
	private static readonly string[] _SymbolicNames = {
		null, "TYPE", "INERT", "IF", "THEN", "ELSE", "TRUE", "FALSE", "BOOL", 
		"CASE", "OF", "AS", "LAMBDA", "LET", "IN", "FIX", "LETREC", "TBOT", "TTOP", 
		"USTRING", "REF", "RREF", "SSOURCE", "SSINK", "UNIT", "UUNIT", "TIMESFLOAT", 
		"UFLOAT", "SUCC", "PRED", "ISZERO", "NAT", "STRINGV", "USCORE", "APOSTROPHE", 
		"DQUOTE", "BANG", "HASH", "TRIANGLE", "STAR", "VBAR", "DOT", "SEMI", "COMMA", 
		"SLASH", "COLON", "COLONCOLON", "EQ", "EQEQ", "LSQUARE", "LT", "LCURLY", 
		"LPAREN", "LEFTARROW", "LCURLYBAR", "LSQUAREBAR", "RCURLY", "RPAREN", 
		"RSQUARE", "GT", "BARRCURLY", "BARGT", "BARRSQUARE", "COLONEQ", "ARROW", 
		"DARROW", "DDARROW", "FLOATV", "INTV", "UCID", "LCID", "WS", "TAB", "NL", 
		"NL1"
	};
	public static readonly IVocabulary DefaultVocabulary = new Vocabulary(_LiteralNames, _SymbolicNames);

	[NotNull]
	public override IVocabulary Vocabulary
	{
		get
		{
			return DefaultVocabulary;
		}
	}

	public override string GrammarFileName { get { return "FullRef.g4"; } }

	public override string[] RuleNames { get { return ruleNames; } }

	public override int[] SerializedAtn { get { return _serializedATN; } }

	static FullRefParser() {
		decisionToDFA = new DFA[_ATN.NumberOfDecisions];
		for (int i = 0; i < _ATN.NumberOfDecisions; i++) {
			decisionToDFA[i] = new DFA(_ATN.GetDecisionState(i), i);
		}
	}

		public FullRefParser(ITokenStream input) : this(input, Console.Out, Console.Error) { }

		public FullRefParser(ITokenStream input, TextWriter output, TextWriter errorOutput)
		: base(input, output, errorOutput)
	{
		Interpreter = new ParserATNSimulator(this, _ATN, decisionToDFA, sharedContextCache);
	}

	public partial class ToplevelContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public CommandContext command() {
			return GetRuleContext<CommandContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode SEMI() { return GetToken(FullRefParser.SEMI, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ToplevelContext toplevel() {
			return GetRuleContext<ToplevelContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode Eof() { return GetToken(FullRefParser.Eof, 0); }
		public ToplevelContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_toplevel; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IFullRefVisitor<TResult> typedVisitor = visitor as IFullRefVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitToplevel(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ToplevelContext toplevel() {
		ToplevelContext _localctx = new ToplevelContext(Context, State);
		EnterRule(_localctx, 0, RULE_toplevel);
		try {
			State = 47;
			ErrorHandler.Sync(this);
			switch (TokenStream.LA(1)) {
			case INERT:
			case IF:
			case TRUE:
			case FALSE:
			case CASE:
			case LAMBDA:
			case LET:
			case FIX:
			case LETREC:
			case REF:
			case UNIT:
			case TIMESFLOAT:
			case SUCC:
			case PRED:
			case ISZERO:
			case STRINGV:
			case BANG:
			case LT:
			case LCURLY:
			case LPAREN:
			case FLOATV:
			case INTV:
			case UCID:
			case LCID:
				EnterOuterAlt(_localctx, 1);
				{
				State = 42;
				command();
				State = 43;
				Match(SEMI);
				State = 44;
				toplevel();
				}
				break;
			case Eof:
				EnterOuterAlt(_localctx, 2);
				{
				State = 46;
				Match(Eof);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class CommandContext : ParserRuleContext {
		public CommandContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_command; } }
	 
		public CommandContext() { }
		public virtual void CopyFrom(CommandContext context) {
			base.CopyFrom(context);
		}
	}
	public partial class Command_binderContext : CommandContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode LCID() { return GetToken(FullRefParser.LCID, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public BinderContext binder() {
			return GetRuleContext<BinderContext>(0);
		}
		public Command_binderContext(CommandContext context) { CopyFrom(context); }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IFullRefVisitor<TResult> typedVisitor = visitor as IFullRefVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitCommand_binder(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class Command_termContext : CommandContext {
		[System.Diagnostics.DebuggerNonUserCode] public TermContext term() {
			return GetRuleContext<TermContext>(0);
		}
		public Command_termContext(CommandContext context) { CopyFrom(context); }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IFullRefVisitor<TResult> typedVisitor = visitor as IFullRefVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitCommand_term(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class Command_tybinderContext : CommandContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode UCID() { return GetToken(FullRefParser.UCID, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public TybinderContext tybinder() {
			return GetRuleContext<TybinderContext>(0);
		}
		public Command_tybinderContext(CommandContext context) { CopyFrom(context); }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IFullRefVisitor<TResult> typedVisitor = visitor as IFullRefVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitCommand_tybinder(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public CommandContext command() {
		CommandContext _localctx = new CommandContext(Context, State);
		EnterRule(_localctx, 2, RULE_command);
		try {
			State = 54;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,1,Context) ) {
			case 1:
				_localctx = new Command_termContext(_localctx);
				EnterOuterAlt(_localctx, 1);
				{
				State = 49;
				term();
				}
				break;
			case 2:
				_localctx = new Command_tybinderContext(_localctx);
				EnterOuterAlt(_localctx, 2);
				{
				State = 50;
				Match(UCID);
				State = 51;
				tybinder();
				}
				break;
			case 3:
				_localctx = new Command_binderContext(_localctx);
				EnterOuterAlt(_localctx, 3);
				{
				State = 52;
				Match(LCID);
				State = 53;
				binder();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class BinderContext : ParserRuleContext {
		public BinderContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_binder; } }
	 
		public BinderContext() { }
		public virtual void CopyFrom(BinderContext context) {
			base.CopyFrom(context);
		}
	}
	public partial class Binder_termContext : BinderContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode EQ() { return GetToken(FullRefParser.EQ, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public TermContext term() {
			return GetRuleContext<TermContext>(0);
		}
		public Binder_termContext(BinderContext context) { CopyFrom(context); }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IFullRefVisitor<TResult> typedVisitor = visitor as IFullRefVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitBinder_term(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class Binder_typeContext : BinderContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode COLON() { return GetToken(FullRefParser.COLON, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public TypeContext type() {
			return GetRuleContext<TypeContext>(0);
		}
		public Binder_typeContext(BinderContext context) { CopyFrom(context); }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IFullRefVisitor<TResult> typedVisitor = visitor as IFullRefVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitBinder_type(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public BinderContext binder() {
		BinderContext _localctx = new BinderContext(Context, State);
		EnterRule(_localctx, 4, RULE_binder);
		try {
			State = 60;
			ErrorHandler.Sync(this);
			switch (TokenStream.LA(1)) {
			case COLON:
				_localctx = new Binder_typeContext(_localctx);
				EnterOuterAlt(_localctx, 1);
				{
				State = 56;
				Match(COLON);
				State = 57;
				type();
				}
				break;
			case EQ:
				_localctx = new Binder_termContext(_localctx);
				EnterOuterAlt(_localctx, 2);
				{
				State = 58;
				Match(EQ);
				State = 59;
				term();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class TypeContext : ParserRuleContext {
		public TypeContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_type; } }
	 
		public TypeContext() { }
		public virtual void CopyFrom(TypeContext context) {
			base.CopyFrom(context);
		}
	}
	public partial class Type_arrowtypeContext : TypeContext {
		[System.Diagnostics.DebuggerNonUserCode] public ArrowtypeContext arrowtype() {
			return GetRuleContext<ArrowtypeContext>(0);
		}
		public Type_arrowtypeContext(TypeContext context) { CopyFrom(context); }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IFullRefVisitor<TResult> typedVisitor = visitor as IFullRefVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitType_arrowtype(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class Type_refContext : TypeContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode RREF() { return GetToken(FullRefParser.RREF, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public AtypeContext atype() {
			return GetRuleContext<AtypeContext>(0);
		}
		public Type_refContext(TypeContext context) { CopyFrom(context); }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IFullRefVisitor<TResult> typedVisitor = visitor as IFullRefVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitType_ref(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class Type_sinkContext : TypeContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode SSINK() { return GetToken(FullRefParser.SSINK, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public AtypeContext atype() {
			return GetRuleContext<AtypeContext>(0);
		}
		public Type_sinkContext(TypeContext context) { CopyFrom(context); }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IFullRefVisitor<TResult> typedVisitor = visitor as IFullRefVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitType_sink(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class Type_sourceContext : TypeContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode SSOURCE() { return GetToken(FullRefParser.SSOURCE, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public AtypeContext atype() {
			return GetRuleContext<AtypeContext>(0);
		}
		public Type_sourceContext(TypeContext context) { CopyFrom(context); }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IFullRefVisitor<TResult> typedVisitor = visitor as IFullRefVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitType_source(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public TypeContext type() {
		TypeContext _localctx = new TypeContext(Context, State);
		EnterRule(_localctx, 6, RULE_type);
		try {
			State = 69;
			ErrorHandler.Sync(this);
			switch (TokenStream.LA(1)) {
			case BOOL:
			case TBOT:
			case TTOP:
			case USTRING:
			case UUNIT:
			case UFLOAT:
			case NAT:
			case LT:
			case LCURLY:
			case LPAREN:
			case UCID:
				_localctx = new Type_arrowtypeContext(_localctx);
				EnterOuterAlt(_localctx, 1);
				{
				State = 62;
				arrowtype();
				}
				break;
			case RREF:
				_localctx = new Type_refContext(_localctx);
				EnterOuterAlt(_localctx, 2);
				{
				State = 63;
				Match(RREF);
				State = 64;
				atype();
				}
				break;
			case SSOURCE:
				_localctx = new Type_sourceContext(_localctx);
				EnterOuterAlt(_localctx, 3);
				{
				State = 65;
				Match(SSOURCE);
				State = 66;
				atype();
				}
				break;
			case SSINK:
				_localctx = new Type_sinkContext(_localctx);
				EnterOuterAlt(_localctx, 4);
				{
				State = 67;
				Match(SSINK);
				State = 68;
				atype();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class AtypeContext : ParserRuleContext {
		public AtypeContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_atype; } }
	 
		public AtypeContext() { }
		public virtual void CopyFrom(AtypeContext context) {
			base.CopyFrom(context);
		}
	}
	public partial class At_tbotContext : AtypeContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode TBOT() { return GetToken(FullRefParser.TBOT, 0); }
		public At_tbotContext(AtypeContext context) { CopyFrom(context); }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IFullRefVisitor<TResult> typedVisitor = visitor as IFullRefVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitAt_tbot(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class At_natContext : AtypeContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode NAT() { return GetToken(FullRefParser.NAT, 0); }
		public At_natContext(AtypeContext context) { CopyFrom(context); }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IFullRefVisitor<TResult> typedVisitor = visitor as IFullRefVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitAt_nat(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class At_boolContext : AtypeContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode BOOL() { return GetToken(FullRefParser.BOOL, 0); }
		public At_boolContext(AtypeContext context) { CopyFrom(context); }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IFullRefVisitor<TResult> typedVisitor = visitor as IFullRefVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitAt_bool(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class At_recordContext : AtypeContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode LCURLY() { return GetToken(FullRefParser.LCURLY, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public FieldtypesContext fieldtypes() {
			return GetRuleContext<FieldtypesContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode RCURLY() { return GetToken(FullRefParser.RCURLY, 0); }
		public At_recordContext(AtypeContext context) { CopyFrom(context); }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IFullRefVisitor<TResult> typedVisitor = visitor as IFullRefVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitAt_record(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class At_ttopContext : AtypeContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode TTOP() { return GetToken(FullRefParser.TTOP, 0); }
		public At_ttopContext(AtypeContext context) { CopyFrom(context); }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IFullRefVisitor<TResult> typedVisitor = visitor as IFullRefVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitAt_ttop(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class At_ucidContext : AtypeContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode UCID() { return GetToken(FullRefParser.UCID, 0); }
		public At_ucidContext(AtypeContext context) { CopyFrom(context); }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IFullRefVisitor<TResult> typedVisitor = visitor as IFullRefVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitAt_ucid(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class At_uunitContext : AtypeContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode UUNIT() { return GetToken(FullRefParser.UUNIT, 0); }
		public At_uunitContext(AtypeContext context) { CopyFrom(context); }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IFullRefVisitor<TResult> typedVisitor = visitor as IFullRefVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitAt_uunit(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class At_typeContext : AtypeContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode LPAREN() { return GetToken(FullRefParser.LPAREN, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public TypeContext type() {
			return GetRuleContext<TypeContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode RPAREN() { return GetToken(FullRefParser.RPAREN, 0); }
		public At_typeContext(AtypeContext context) { CopyFrom(context); }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IFullRefVisitor<TResult> typedVisitor = visitor as IFullRefVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitAt_type(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class At_variantContext : AtypeContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode LT() { return GetToken(FullRefParser.LT, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public FieldtypesContext fieldtypes() {
			return GetRuleContext<FieldtypesContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode GT() { return GetToken(FullRefParser.GT, 0); }
		public At_variantContext(AtypeContext context) { CopyFrom(context); }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IFullRefVisitor<TResult> typedVisitor = visitor as IFullRefVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitAt_variant(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class At_ustringContext : AtypeContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode USTRING() { return GetToken(FullRefParser.USTRING, 0); }
		public At_ustringContext(AtypeContext context) { CopyFrom(context); }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IFullRefVisitor<TResult> typedVisitor = visitor as IFullRefVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitAt_ustring(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class At_ufloatContext : AtypeContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode UFLOAT() { return GetToken(FullRefParser.UFLOAT, 0); }
		public At_ufloatContext(AtypeContext context) { CopyFrom(context); }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IFullRefVisitor<TResult> typedVisitor = visitor as IFullRefVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitAt_ufloat(this);
			else return visitor.VisitChildren(this);
		}
	}
